app/user/ocp/user-istio-prod.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: user
  name: user
spec:
  replicas: 1
  revisionHistoryLimit: 10
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: user
        deploymentconfig: user
        version: v1
    spec:
      containers:
      - name: user
        image: docker-registry.default.svc:5000/amazin-dev/user:0.0.1-SNAPSHOT
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  test: false

---
kind: Service
apiVersion: v1
metadata:
  name: user
  labels:
    app: user
spec:
  ports:
  - name: 8080-tcp
    protocol: TCP
    port: 8080
    targetPort: 8080
  selector:
    app: user
    deploymentconfig: user
  type: ClusterIP
  sessionAffinity: None
status:
  loadBalancer: {}

---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: gateway
  labels:
    app: user
  annotations:
    kubernetes.io/ingress.class: "istio"
spec:
  rules:
  - http:
      paths:
      - path: /.*
        backend:
          serviceName: user
          servicePort: 8080

kind: Route
apiVersion: v1
metadata:
  annotations:
  labels:
    app: user
  name: user
spec:
  host: user.apps.ocp.datr.eu
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: user
    weight: 100
  wildcardPolicy: None
